--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,10 @@ jobs:
       - name: Setup feeds
         run: |
           cd sdk
-          echo "src-git luci https://github.com/openwrt/luci.git;openwrt-23.05" >> feeds.conf.default
+          # 只有当 feeds.conf.default 中没有 luci feed 时才添加
+          if ! grep -q "^src-git luci" feeds.conf.default 2>/dev/null; then
+            echo "src-git luci https://github.com/openwrt/luci.git;openwrt-23.05" >> feeds.conf.default
+          fi
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
