--- a/root/usr/share/rpcd/acl.d/luci-app-argo.json
+++ b/root/usr/share/rpcd/acl.d/luci-app-argo.json
@@ -1,19 +1,19 @@
 {
-    "luci-app-cloudflared": {
-        "description": "Grant access for luci-app-cloudflared",
+    "luci-app-argo": {
+        "description": "Grant access for luci-app-argo",
         "read": {
             "cgi-io": [
                 "exec"
             ],
             "file": {
-                "/etc/cloudflared/token": [
+                "/etc/argo/token": [
                     "read"
                 ],
                 "/usr/bin/cloudflared": [
                     "stat",
                     "exec"
                 ],
-                "/etc/init.d/cloudflared": [
+                "/etc/init.d/argo": [
                     "stat",
                     "exec"
                 ]
@@ -23,7 +23,7 @@
                     "exec",
                     "read"
                 ],
-                "luci.cloudflared": [
+                "luci.argo": [
                     "get_status",
                     "get_arch"
                 ],
@@ -32,12 +32,12 @@
                 ]
             },
             "uci": [
-                "cloudflared"
+                "argo"
             ]
         },
         "write": {
             "file": {
-                "/etc/cloudflared/*": [
+                "/etc/argo/*": [
                     "write"
                 ]
             },
@@ -45,12 +45,12 @@
                 "luci": [
                     "setInitAction"
                 ],
-                "luci.cloudflared": [
+                "luci.argo": [
                     "install"
                 ]
             },
             "uci": [
-                "cloudflared"
+                "argo"
             ]
         }
     }
